Sticks now drop sawdust

--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -153,7 +153,7 @@ general {
                 # Formats: Dictionary Item: 'ore:<dictionary name>#<count>', Mod Item: '<modId>:<itemId>#<count>', Exact Mod Item: '<modId>:<itemId>@<meta>#<count>'
                 S:whitelist <
                     minecraft:stick@0#1-3
-                    thermalfoundation:materials:800#1-2
+                    thermalfoundation:materials@800#1-2
                  >
             }
 
