Quark crystal/biome caves 4 times as common

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -483,7 +483,7 @@ decoration {
 
 
 experimental {
-    B:"Bigger caves"=false
+    B:"Bigger caves"=true
 
     # This feature is an incomplete test, and not fit for regular gameplay. Feel free to enable it to mess around but it may explode horribly. Don't report bugs with it.
     # To make a colored light, use a Lit Redstone Lamp and put the color of Stained Glass you want under it.
@@ -1399,7 +1399,7 @@ world {
 
     "crystal caves" {
         # Given this value as X, crystal caves will spawn on average 1 per X chunks
-        I:"Crystal Cave Rarity"=150
+        I:"Crystal Cave Rarity"=37
 
         dimensions {
             #  [default: [0]]
@@ -1443,7 +1443,7 @@ world {
             I:"Minimum Y Level"=10
 
             # This biome will spawn in 1 of X valid chunks [range: 0 ~ 2147483647, default: 160]
-            I:Rarity=160
+            I:Rarity=40
 
             # The higher, the less shrubs will spawn [range: 0 ~ 2147483647, default: 100]
             I:"Shrub Chance"=100
@@ -1513,7 +1513,7 @@ world {
             I:"Minimum Y Level"=10
 
             # This biome will spawn in 1 of X valid chunks [range: 0 ~ 2147483647, default: 160]
-            I:Rarity=160
+            I:Rarity=40
 
             # The higher, the less stalactites will spawn [range: 0 ~ 2147483647, default: 10]
             I:"Stalactite Chance"=10
@@ -1568,7 +1568,7 @@ world {
             I:"Minimum Y Level"=10
 
             # This biome will spawn in 1 of X valid chunks [range: 0 ~ 2147483647, default: 240]
-            I:Rarity=240
+            I:Rarity=60
 
             # The higher, the less slime blocks will spawn [range: 0 ~ 2147483647, default: 12]
             I:"Slime Block Chance"=12
@@ -1620,7 +1620,7 @@ world {
             I:"Minimum Y Level"=10
 
             # This biome will spawn in 1 of X valid chunks [range: 0 ~ 2147483647, default: 200]
-            I:Rarity=200
+            I:Rarity=50
 
             # The higher, the less sea lanterns will spawn [range: 0 ~ 2147483647, default: 120]
             I:"Sea Lantern Chance"=120
@@ -1693,7 +1693,7 @@ world {
             I:"Nest Cobweb Range"=3
 
             # This biome will spawn in 1 of X valid chunks [range: 0 ~ 2147483647, default: 160]
-            I:Rarity=160
+            I:Rarity=40
 
             #  [range: 0 ~ 2147483647, default: 26]
             I:"X Minimum"=26
@@ -1745,7 +1745,7 @@ world {
             I:"Minimum Y Level"=10
 
             # This biome will spawn in 1 of X valid chunks [range: 0 ~ 2147483647, default: 160]
-            I:Rarity=160
+            I:Rarity=40
 
             # The higher, the less roots will spawn [range: 0 ~ 2147483647, default: 40]
             I:"Root Chance"=40
@@ -1797,7 +1797,7 @@ world {
             I:"Minimum Y Level"=10
 
             # This biome will spawn in 1 of X valid chunks [range: 0 ~ 2147483647, default: 160]
-            I:Rarity=160
+            I:Rarity=40
 
             # The higher, the less stalagmites will spawn [range: 0 ~ 2147483647, default: 60]
             I:"Stalagmite Chance"=60
@@ -1858,7 +1858,7 @@ world {
             I:"Obsidian Chance"=16
 
             # This biome will spawn in 1 of X valid chunks [range: 0 ~ 2147483647, default: 160]
-            I:Rarity=160
+            I:Rarity=40
 
             #  [range: 0 ~ 2147483647, default: 26]
             I:"X Minimum"=26
@@ -1911,7 +1911,7 @@ world {
             I:"Mushroom Chance"=15
 
             # This biome will spawn in 1 of X valid chunks [range: 0 ~ 2147483647, default: 160]
-            I:Rarity=160
+            I:Rarity=40
 
             #  [range: 0 ~ 2147483647, default: 26]
             I:"X Minimum"=26
