Made it so wither dust from darkutils doesn't drop from wither skeletons

--- a/config/darkutils.cfg
+++ b/config/darkutils.cfg
@@ -66,10 +66,10 @@ _features {
 
 crafting_materials {
     # The weighting for Wither Skeletons dropping Wither Dust [range: 0 ~ 256, default: 1]
-    I:"Dust Drop Weight"=1
+    I:"Dust Drop Weight"=0
 
     # Should wither skeletons drop wither dust? [default: true]
-    B:"WSkeleton Drop Dust"=true
+    B:"WSkeleton Drop Dust"=false
 }
 
 
@@ -136,5 +136,3 @@ vector_plate {
     # Should vector plates prevent items from being picked up, while they are being pushed? [default: true]
     B:"Prevent Item Pickup"=true
 }
-
-
