--- a/config/buildcraft/objects.cfg
+++ b/config/buildcraft/objects.cfg
@@ -4,7 +4,7 @@ blocks {
     B:advanced_crafting_table=true
     B:architect=true
     B:assembly_table=true
-    B:autoworkbench_item=true
+    B:autoworkbench_item=false
     B:builder=true
     B:chute=true
     B:decorated=true
@@ -71,5 +71,3 @@ items {
     B:wire=true
     B:wrench=true
 }
-
-
