--- a/config/buildcraft/objects.cfg
+++ b/config/buildcraft/objects.cfg
@@ -45,7 +45,7 @@ items {
     B:filler_planner=true
     B:fragile_fluid_shard=true
     B:gear_diamond=true
-    B:gear_gold=true
+    B:gear_gold=false
     B:gear_iron=true
     B:gear_stone=true
     B:gear_wood=true
