Disabled the rudimentary generator
close #233

--- a/config/enderrift.cfg
+++ b/config/enderrift.cfg
@@ -7,7 +7,7 @@ general {
 
 
 generator {
-    B:Enable=true
+    B:Enable=false
 }
 
 
@@ -21,5 +21,3 @@ powerusage {
     I:PowerPerInsertionGeometric=0
     D:PowerPerInsertionLinear=0.93
 }
-
-
