--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -17,7 +17,7 @@ battery {
 
 client {
     # Possible Values: AE, EU, RF
-    S:PowerUnit=AE
+    S:PowerUnit=RF
 
     # Possible Values: AUTOSEARCH, AUTOSEARCH_KEEP, MANUAL_SEARCH, MANUAL_SEARCH_KEEP, JEI_AUTOSEARCH, JEI_AUTOSEARCH_KEEP, JEI_MANUAL_SEARCH, JEI_MANUAL_SEARCH_KEEP
     S:SEARCH_MODE=AUTOSEARCH
@@ -445,5 +445,3 @@ worldgen {
     I:quartzOresPerCluster=4
     D:spawnChargedChance=0.07999998331069946
 }
-
-
