Updated a bunch of mods

--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -707,6 +707,9 @@ other {
     # The weight assigned to the generation of the Wasteland Biomes - higher numbers correspond to higher generation rates.
     I:wasteland_biome_weight=5
 
+    # Will the Wasteland Dimension be generated?
+    B:wasteland_dimension_gen=true
+
     # Set the dimension ID for the Wasteland Dimension.
     I:wasteland_dimension=4598
 
@@ -727,6 +730,15 @@ other {
 
     # Register alternative redstone, glowstone, cryotheum and ender fluids? It is recommended that this is set to true if no CoFH mods are installed.
     B:register_cofh_fluids=false
+
+    # Will blocks have connected textures if they are available?
+    B:connected_textures=true
+
+    # Enable or disable connected textures for each individual available block. Order: Transparent Reactor Casing, Fusion Electromagnet.
+    B:connected_textures_each <
+        true
+        true
+     >
 }
 
 
