--- a/config/randomtweaks/randomtweaks.cfg
+++ b/config/randomtweaks/randomtweaks.cfg
@@ -5,7 +5,7 @@ general {
     ##########################################################################################################
     # client
     #--------------------------------------------------------------------------------------------------------#
-    # Client-sided (excluding Ding and the time of day overlay)
+    # Client-sided
     ##########################################################################################################
 
     client {
@@ -15,7 +15,7 @@ general {
         # Removes underwater fog.
         B:clearWater=true
 
-        # Enables Contributor Capes.
+        # Enables contributor capes.
         B:contributorCapes=true
 
         # Disables the Ender Dragon death sound.
@@ -27,6 +27,9 @@ general {
         # Disables the Wither spawn sound.
         B:disableWitherSpawnSound=false
 
+        # Whether FoV changes are enabled by default.
+        B:fovChangesEnabledByDefault=true
+
         # Moves the Bucket to the Tools creative tab.
         B:moveBucketCreativeTab=true
 
@@ -36,8 +39,14 @@ general {
         # Enables the Reload Sound System keybind.
         B:reloadSoundSystemKeybind=true
 
+        # Whether the shortened versions of the gamemode commands (/gms, /gmc, /gma and /gmsp) should be replaced by the longer ones before being sent. This does not work in 1.10.
+        B:shortGamemodeCommands=true
+
         # Moves the spawn eggs to their own creative tab.
         B:spawnEggsCreativeTab=true
+
+        # Enables a keybind to disable FoV changes.
+        B:toggleFoVChangesKeybind=false
     }
 
     ##########################################################################################################
@@ -50,7 +59,7 @@ general {
         # Enables the /deletegamerule command.
         B:deletegamerule=true
 
-        # Allows /give to accept integer IDs and amounts higher than 64.
+        # Allows /give to accept integer IDs, amounts higher than 64, and ore dictionary names prefixed by "ore:".
         B:giveTweaks=true
 
         # Changes the /help command to make sure that sorting commands doesn't cause an error.
@@ -75,9 +84,12 @@ general {
     ding {
         # Disables this feature if iChun's Ding is installed.
         B:disableIfDingIsInstalled=true
-
-        # The name of the sound to play when Minecraft starts. Leave this empty to disable it.
         S:soundName=entity.experience_orb.pickup
+
+        # The names of the sounds to play when Minecraft starts. Leave this empty to disable it.
+        S:soundNames <
+            entity.experience_orb.pickup
+         >
 
         # The pitch of the sound to play when Minecraft starts.
         # Min: 0.0
@@ -105,7 +117,18 @@ general {
         # Max: 1024.0
         D:attackSpeed=4.0
 
-        # Enables more Roman numerals (Roman numerals from -32768 to 32767).
+        # The interval between every check for unused dimensions in ticks. Set this to 0 to disable the check.
+        # Min: 0
+        # Max: 2147483647
+        I:dimensionUnloadCheckInterval=600
+
+        # Disables the cumulative anvil cost.
+        B:disableCumulativeAnvilCost=true
+
+        # Replaces NuclearCraft Sulfur drops with Thermal Expansion Sulfur.
+        B:dropTESulfur=false
+
+        # Enables Roman numerals from -32768 to 32767.
         B:moreRomanNumerals=true
 
         # Ocelots can be healed with fish.
@@ -249,6 +272,109 @@ general {
 
         # The Y offset of the time of day overlay.
         I:y=0
+    }
+
+    ##########################################################################################################
+    # autothirdperson
+    #--------------------------------------------------------------------------------------------------------#
+    # Auto third person
+    ##########################################################################################################
+
+    autothirdperson {
+        # Whether auto third person is enabled when riding a boat.
+        B:boat=true
+
+        # Whether auto third person is enabled when flying with elytra.
+        B:elytra=true
+
+        # Whether auto third person is enabled.
+        B:enabled=true
+
+        # Whether auto third person is enabled when riding a horse.
+        B:horse=true
+
+        # Whether auto third person is enabled when riding a minecart.
+        B:minecart=true
+
+        # Whether auto third person is enabled when riding a pig.
+        B:pig=true
+    }
+
+    ##########################################################################################################
+    # oceanfloor
+    #--------------------------------------------------------------------------------------------------------#
+    # Ocean floor
+    ##########################################################################################################
+
+    oceanfloor {
+        # The clay spawn chance.
+        # Min: 0
+        # Max: 2147483647
+        I:clayChance=65
+
+        # The amount of clay in a vein.
+        # Min: 0
+        # Max: 2147483647
+        I:clayVeinSize=32
+
+        # The dirt spawn chance.
+        # Min: 0
+        # Max: 2147483647
+        I:dirtChance=30
+
+        # The amount of dirt in a vein.
+        # Min: 0
+        # Max: 2147483647
+        I:dirtVeinSize=18
+
+        # Enables the ocean floor worldgen.
+        B:enabled=false
+
+        # The maximum Y value.
+        # Min: 0
+        # Max: 2147483647
+        I:maxY=128
+
+        # The minimum Y value.
+        # Min: 0
+        # Max: 2147483647
+        I:minY=20
+
+        # The sand spawn chance.
+        # Min: 0
+        # Max: 2147483647
+        I:sandChance=45
+
+        # The amount of sand in a vein.
+        # Min: 0
+        # Max: 2147483647
+        I:sandVeinSize=22
+    }
+
+    ##########################################################################################################
+    # playerheaddrops
+    #--------------------------------------------------------------------------------------------------------#
+    # Player head drops
+    ##########################################################################################################
+
+    playerheaddrops {
+        # The player head drop chance when a player is killed by a charged creeper.
+        # Min: 0.0
+        # Max: 1.0
+        D:chanceWhenKilledByChargedCreeper=1.0
+
+        # The player head drop chance when a player is killed by another player.
+        # Min: 0.0
+        # Max: 1.0
+        D:chanceWhenKilledByPlayer=1.0
+
+        # Whether players should drop their heads when they die.
+        B:enabled=true
+
+        # The normal player head drop chance.
+        # Min: 0.0
+        # Max: 1.0
+        D:normalChance=1.0
     }
 
 }
