Added recipe for burnium: 2 for 8 ash + blaze rod

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -86,6 +86,9 @@ crafting {
 
 
 "enabled blocks" {
+    B:alexiy.finestuff.blocks.BlockBetterStone=true
+    B:alexiy.finestuff.blocks.BlockEnergyDetector=true
+    B:alexiy.finestuff.blocks.BlockSwitch=true
     B:appeng.block.misc.BlockQuartzFixture=true
     B:appeng.block.misc.BlockTinyTNT=true
     B:appeng.decorative.solid.BlockChargedQuartzOre=true
