--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -18,6 +18,19 @@ world-1381165263 {
 }
 
 
+world-1553709931 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide items by clicking them in the item list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of items next to open guis.
+    B:overlayEnabled=true
+}
+
+
 world-1585196234 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -123,14 +136,9 @@ world-2068116865 {
 
 
 world-2117386381 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
     S:filterText=stic
-
-    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
@@ -139,6 +147,14 @@ world-390047308 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=bone
+    B:overlayEnabled=true
+}
+
+
+world-497592332 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=tome
     B:overlayEnabled=true
 }
 
@@ -155,6 +171,14 @@ world-545872455 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@terr
+    B:overlayEnabled=true
+}
+
+
+world-610714742 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@chars
     B:overlayEnabled=true
 }
 
@@ -260,6 +284,38 @@ world1544803905 {
 }
 
 
+world167414058 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world2023564750 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=bronze
+    B:overlayEnabled=true
+}
+
+
+world2083999380 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=bone
+    B:overlayEnabled=true
+}
+
+
+world2090571502 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world2128809628 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -328,6 +384,14 @@ world869203750 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@soul
+    B:overlayEnabled=true
+}
+
+
+world912486375 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=fact
     B:overlayEnabled=true
 }
 
