--- a/config/integrateddynamics.cfg
+++ b/config/integrateddynamics.cfg
@@ -9,7 +9,7 @@ biome {
 
 
 block {
-    B:coal_generator=true
+    B:coal_generator=false
     B:creative_energy_battery=true
     B:crystalized_chorus_block=true
     B:crystalized_chorus_block_stairs=true
@@ -167,5 +167,3 @@ worldgeneration {
     # The 1/x chance at which Menril Wood will be filled with Menril Resin when generated, the higher this value, the lower the chance.
     I:menril_log_filled.filledMenrilLogChance=10
 }
-
-
