Fixed Terraqueous script

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,17 @@ OpenComputersMod-1.7.2.67-lua53-native.64.dll
 realms_persistence.json
 config/worldedit/worldedit.properties
 config/betterbuilderswands.cfg
+config/AppliedEnergistics2/aerecipes/items.csv
+config/AppliedEnergistics2/aerecipes/items.csv
+config/buildcraft/detailed.properties
+config/InvTweaks.cfg
+config/worldedit/worldedit.properties
+config/splash.properties
+config/worldedit/worldedit.properties
+config/splash.properties
+config/randomtweaks/timeofdayoverlayworlds.json
+config/InvTweaks.cfg
+config/buildcraft/detailed.properties
+config/AppliedEnergistics2/Facades.cfg
+config/AppliedEnergistics2/AppliedEnergistics2.cfg
+config/AppliedEnergistics2/aerecipes/items.csv
