DIsabled openblocks elevator

--- a/config/openblocks.cfg
+++ b/config/openblocks.cfg
@@ -25,7 +25,7 @@ blocks {
     B:donation_station=true
     B:drawing_table=true
     B:elevator=false
-    B:elevator_rotating=true
+    B:elevator_rotating=false
     B:fan=true
     B:flag=true
     B:golden_egg=true
