--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -12,6 +12,7 @@ display {
 
     # The rotation that items use when travelling through pipes. Set to 'enabled' for full rotation, 'disabled' for no rotation, or 'horizontals_only' to only rotate items when going horizontally.
     S:itemRenderRotation=enabled
+    B:pipes.fluidColourIsBorder=false
 
     # When false laser beams will not be visible while transmitting power without wearing Goggles
     B:renderLaserBeams=true
@@ -75,6 +76,12 @@ general {
 }
 
 
+performance {
+    # Disable this if you get sub-standard framerates due to buildcraft's ~60 sprites animating every frame.
+    B:enableAnimatedSprites=true
+}
+
+
 worldgen {
     # Should BuildCraft generate anything in the world?
     B:enable=true
@@ -90,106 +97,106 @@ worldgen {
 
     # Biome registry names (e.g. 'minecraft:hell','minecraft:jungle') of biomes that should never generate oil.
     S:excludedBiomes <
-	minecraft:ocean
-	minecraft:plains
-	minecraft:desert
-	minecraft:extreme_hills
-	minecraft:forest
-	minecraft:taiga
-	minecraft:swampland
-	minecraft:river
-	minecraft:hell
-	minecraft:sky
-	minecraft:frozen_ocean
-	minecraft:frozen_river
-	minecraft:ice_flats
-	minecraft:ice_mountains
-	minecraft:mushroom_island
-	minecraft:mushroom_island_shore
-	minecraft:beaches
-	minecraft:desert_hills
-	minecraft:forest_hills
-	minecraft:taiga_hills
-	minecraft:smaller_extreme_hills
-	minecraft:jungle
-	minecraft:jungle_hills
-	minecraft:jungle_edge
-	minecraft:deep_ocean
-	minecraft:stone_beach
-	minecraft:cold_beach
-	minecraft:birch_forest
-	minecraft:birch_forest_hills
-	minecraft:roofed_forest
-	minecraft:taiga_cold
-	minecraft:taiga_cold_hills
-	minecraft:redwood_taiga
-	minecraft:redwood_taiga_hills
-	minecraft:extreme_hills_with_trees
-	minecraft:savanna
-	minecraft:savanna_rock
-	minecraft:mesa
-	minecraft:mesa_rock
-	minecraft:mesa_clear_rock
-	randomthings:spectral
-	appliedenergistics2:storage_biome
-	integrateddynamics:biome_meneglin
-	nex:hell
-	nex:ruthless_sands
-	nex:fungi_forest
-	nex:torrid_wasteland
-	nex:arctic_abyss
-	nuclearcraft:nuclear_wasteland
-	rockhounding_surface:white_sands
-	traverse:autumnal_woods
-	traverse:woodlands
-	traverse:mini_jungle
-	traverse:meadow
-	traverse:green_swamp
-	traverse:red_desert
-	traverse:temperate_rainforest
-	traverse:badlands
-	traverse:mountainous_desert
-	traverse:rocky_plateau
-	traverse:forested_hills
-	traverse:birch_forested_hills
-	traverse:autumnal_wooded_hills
-	traverse:cliffs
-	traverse:glacier
-	traverse:glacier_spikes
-	traverse:snowy_coniferous_forest
-	traverse:lush_hills
-	traverse:canyon
-	traverse:crag_cliffs
-	aroma1997sdimension:miningbiome
-	minecraft:void
-	minecraft:mutated_plains
-	minecraft:mutated_desert
-	minecraft:mutated_extreme_hills
-	minecraft:mutated_forest
-	minecraft:mutated_taiga
-	minecraft:mutated_swampland
-	minecraft:mutated_ice_flats
-	minecraft:mutated_jungle
-	minecraft:mutated_jungle_edge
-	minecraft:mutated_birch_forest
-	minecraft:mutated_birch_forest_hills
-	minecraft:mutated_roofed_forest
-	minecraft:mutated_taiga_cold
-	minecraft:mutated_redwood_taiga
-	minecraft:mutated_redwood_taiga_hills
-	minecraft:mutated_extreme_hills_with_trees
-	minecraft:mutated_savanna
-	minecraft:mutated_savanna_rock
-	minecraft:mutated_mesa
-	minecraft:mutated_mesa_rock
-	minecraft:mutated_mesa_clear_rock
+        minecraft:ocean
+        minecraft:plains
+        minecraft:desert
+        minecraft:extreme_hills
+        minecraft:forest
+        minecraft:taiga
+        minecraft:swampland
+        minecraft:river
+        minecraft:hell
+        minecraft:sky
+        minecraft:frozen_ocean
+        minecraft:frozen_river
+        minecraft:ice_flats
+        minecraft:ice_mountains
+        minecraft:mushroom_island
+        minecraft:mushroom_island_shore
+        minecraft:beaches
+        minecraft:desert_hills
+        minecraft:forest_hills
+        minecraft:taiga_hills
+        minecraft:smaller_extreme_hills
+        minecraft:jungle
+        minecraft:jungle_hills
+        minecraft:jungle_edge
+        minecraft:deep_ocean
+        minecraft:stone_beach
+        minecraft:cold_beach
+        minecraft:birch_forest
+        minecraft:birch_forest_hills
+        minecraft:roofed_forest
+        minecraft:taiga_cold
+        minecraft:taiga_cold_hills
+        minecraft:redwood_taiga
+        minecraft:redwood_taiga_hills
+        minecraft:extreme_hills_with_trees
+        minecraft:savanna
+        minecraft:savanna_rock
+        minecraft:mesa
+        minecraft:mesa_rock
+        minecraft:mesa_clear_rock
+        randomthings:spectral
+        appliedenergistics2:storage_biome
+        integrateddynamics:biome_meneglin
+        nex:hell
+        nex:ruthless_sands
+        nex:fungi_forest
+        nex:torrid_wasteland
+        nex:arctic_abyss
+        nuclearcraft:nuclear_wasteland
+        rockhounding_surface:white_sands
+        traverse:autumnal_woods
+        traverse:woodlands
+        traverse:mini_jungle
+        traverse:meadow
+        traverse:green_swamp
+        traverse:red_desert
+        traverse:temperate_rainforest
+        traverse:badlands
+        traverse:mountainous_desert
+        traverse:rocky_plateau
+        traverse:forested_hills
+        traverse:birch_forested_hills
+        traverse:autumnal_wooded_hills
+        traverse:cliffs
+        traverse:glacier
+        traverse:glacier_spikes
+        traverse:snowy_coniferous_forest
+        traverse:lush_hills
+        traverse:canyon
+        traverse:crag_cliffs
+        aroma1997sdimension:miningbiome
+        minecraft:void
+        minecraft:mutated_plains
+        minecraft:mutated_desert
+        minecraft:mutated_extreme_hills
+        minecraft:mutated_forest
+        minecraft:mutated_taiga
+        minecraft:mutated_swampland
+        minecraft:mutated_ice_flats
+        minecraft:mutated_jungle
+        minecraft:mutated_jungle_edge
+        minecraft:mutated_birch_forest
+        minecraft:mutated_birch_forest_hills
+        minecraft:mutated_roofed_forest
+        minecraft:mutated_taiga_cold
+        minecraft:mutated_redwood_taiga
+        minecraft:mutated_redwood_taiga_hills
+        minecraft:mutated_extreme_hills_with_trees
+        minecraft:mutated_savanna
+        minecraft:mutated_savanna_rock
+        minecraft:mutated_mesa
+        minecraft:mutated_mesa_rock
+        minecraft:mutated_mesa_clear_rock
      >
 
     # Dimension ID's (e.g. '-1' for the nether,'1' for the end) of dimensions that should never generate oil.
     I:excludedDimensions <
         -1
         1
-	43
+        43
      >
 
     # Should BuildCraft generate water springs?
