--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -614,7 +614,6 @@ advanced {
         tconstruct:tooltables:2:forestry:logs.4:0
         forestry:refractory:ironberryjuice;
         forestry:can:plasma;
-        inspirations:bookshelf
         forestry:refractory:glowing_water_brown;
         forestry:can:thorium_fluoride;
         forestry:can:magnesium;
@@ -679,7 +678,9 @@ advanced {
         forestry:can:depleted_fuel_hecm_245_fluoride;
         forestry:can:potion;
         forestry:capsule:binnie.whiskey.rye;
+        natura:overworld_seeds:0
         forestry:capsule:binnie.juice.white.grape;
+        natura:overworld_seeds:1
         forestry:refractory:depleted_fuel_hecm_245_fluoride;
         forestry:can:fuel_lecm_245_fluoride_flibe;
         forestry:can:depleted_fuel_lecm_245_fluoride_flibe;
@@ -833,7 +834,9 @@ advanced {
         forestry:refractory:copper_nak;
         forestry:refractory:fuel_hecf_249_fluoride;
         forestry:refractory:sulphur;
+        natura:overworld_seed_bags:1
         forestry:capsule:binnie.wine.plum;
+        natura:overworld_seed_bags:0
         forestry:capsule:binnie.juice.tomato;
         forestry:refractory:dist_water;
         forestry:can:neptunium_236_fluoride;
@@ -1457,9 +1460,12 @@ advanced {
         forestry:capsule:potion_splash;
         forestry:refractory:californium_251;
         forestry:can:oil;
+        natura:materials:3
         rftools:crafter1
         forestry:can:plutonium_238;
         forestry:can:depleted_fuel_heu_235;
+        natura:materials:1
+        natura:materials:0
         forestry:refractory:ethanol;
         tconstruct:tooltables:2:extratrees:logs.fireproof.3:2
         tconstruct:tooltables:2:extratrees:logs.fireproof.3:1
@@ -1593,7 +1599,6 @@ advanced {
         tconstruct:tooltables:1:forestry:planks.fireproof.0:15
         tconstruct:tooltables:1:forestry:planks.fireproof.0:11
         tconstruct:tooltables:1:forestry:planks.fireproof.0:12
-        inspirations:enlightened_bush
         tconstruct:tooltables:1:forestry:planks.fireproof.0:13
         tconstruct:tooltables:1:forestry:planks.fireproof.0:14
         forestry:can:depleted_fuel_heb_248;
