--- a/config/natura.cfg
+++ b/config/natura.cfg
@@ -3,20 +3,20 @@
 ~CONFIG_VERSION: 0.2
 
 enable-disable {
-    B:"Drop barley seeds from grass"=true
-    B:"Drop cotton seeds from grass"=true
+    B:"Drop barley seeds from grass"=false
+    B:"Drop cotton seeds from grass"=false
     B:"Enable Clouds"=false
     B:"Enable wheat to flour recipe"=true
     B:"Generate Amaranth Trees"=true
     B:"Generate Ash Clouds"=true
-    B:"Generate Barley Crops"=true
+    B:"Generate Barley Crops"=false
     B:"Generate Blackberry Bushes"=true
     B:"Generate Blightberry Bushes"=true
     B:"Generate Bloodwood Trees"=true
     B:"Generate Blue Glowshroom"=true
     B:"Generate Bluebell Flowers"=true
     B:"Generate Blueberry Bushes"=true
-    B:"Generate Cotton Crops"=true
+    B:"Generate Cotton Crops"=false
     B:"Generate Dark Clouds"=true
     B:"Generate Darkwood Trees"=true
     B:"Generate Duskberry Bushes"=true
