--- a/config/openblocks.cfg
+++ b/config/openblocks.cfg
@@ -430,7 +430,7 @@ tanks {
     I:bucketsPerTank=16
 
     # Should filled tanks be searchable with creative menu
-    B:displayAllFluids=true
+    B:displayAllFluids=false
 
     # Tanks will emit light when they contain a liquid that glows (eg. lava)
     B:emitLight=true
