You can no longer solidify clathrates with cryothium dust

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -108,6 +108,10 @@ crafting {
     B:blusunrize.immersiveengineering.common.blocks.BlockIEBase=true
     B:blusunrize.immersiveengineering.common.blocks.metal.BlockMetalDecoration0=true
     B:buildcraft.core.block.BlockDecoration=true
+    B:charcoalPit.blocks.BlockBronzeReinforcedBrick=true
+    B:charcoalPit.blocks.BlockCoke=true
+    B:charcoalPit.blocks.BlockLogPile=true
+    B:charcoalPit.blocks.BlockThatch=true
     B:cofh.thermalfoundation.block.BlockOre=true
     B:cofh.thermalfoundation.block.BlockOreFluid=true
     B:cofh.thermalfoundation.block.BlockRockwool=true
