You can put the charset tablet in an akeshic tome

--- a/config/akashictome.cfg
+++ b/config/akashictome.cfg
@@ -16,6 +16,7 @@ general {
         opencomputers:tool:4
         immersiveengineering:tool:3
 	integrateddynamics:on_the_dynamics_of_integration
+	charset:tablet
 	theoneprobe:probenote
      >
     S:"Whitelisted Names" <
