Disabled integrated dynamics coal generator

--- a/scripts/docomentation/example.zs.example
+++ b/scripts/docomentation/example.zs.example
@@ -14,3 +14,5 @@ val batch = {
   <examplemod:exampleItem6> : "Example description"
 } as string[IItemStack];
 addDescBatch(batch);
+
+print("Documentation for examplemod loaded successfully");
