Added Bedrock Ores

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -129,6 +129,11 @@ backpacks16840 {
 }
 
 
+bedrockores {
+    B:bedrockminer=false
+}
+
+
 bibliocraft {
     B:armorstand=false
     B:armorstand.1=false
@@ -399,6 +404,12 @@ binniecore {
     B:storage.3=false
     B:storage.4=false
     B:storage.5=false
+}
+
+
+bithop {
+    B:bithop=false
+    B:fluxhop=false
 }
 
 
@@ -1011,6 +1022,11 @@ buildcrafttransport {
 }
 
 
+buildersguides {
+    B:marker=false
+}
+
+
 careerbees {
     B:alvearyframe=false
     B:flowerpedastal=false
@@ -1145,6 +1161,37 @@ ceramics {
     B:rainbowclay.5=true
     B:rainbowclay.6=true
     B:rainbowclay.7=true
+}
+
+
+charcoalpit {
+    B:blackdyedpot=false
+    B:blockcoke=true
+    B:bloomeryhatch=false
+    B:bluedyedpot=false
+    B:brickcreosotecollector=false
+    B:brokenpot=false
+    B:bronzereinforcedbrick=true
+    B:browndyedpot=false
+    B:ceramicpot=false
+    B:claypot=false
+    B:cyandyedpot=false
+    B:graydyedpot=false
+    B:greendyedpot=false
+    B:lightbluedyedpot=false
+    B:limedyedpot=false
+    B:logpile=true
+    B:magentadyedpot=false
+    B:nethercreosotecollector=false
+    B:orangedyedpot=false
+    B:pinkdyedpot=false
+    B:purpledyedpot=false
+    B:reddyedpot=false
+    B:silverdyedpot=false
+    B:stonecreosotecollector=false
+    B:thatch=true
+    B:whitedyedpot=false
+    B:yellowdyedpot=false
 }
 
 
@@ -2079,6 +2126,91 @@ extratrees {
     B:stairssyzgium=false
     B:stairswhitebeam=false
     B:stairsyew=false
+}
+
+
+factorytech {
+    B:agitator=false
+    B:autocrafter=false
+    B:autominer=false
+    B:autopuller=false
+    B:blockbreaker=false
+    B:bottomhatch=true
+    B:bricks=true
+    B:bricks.1=true
+    B:bricks.2=true
+    B:bricks.3=true
+    B:buffercrate=false
+    B:bulkmover=false
+    B:centrifuge=false
+    B:charger=false
+    B:circuitscribe=false
+    B:compressor=false
+    B:conveyor=false
+    B:crate=false
+    B:crucible=false
+    B:decocoil=false
+    B:deepdrill=false
+    B:disassembler=false
+    B:disruptor=false
+    B:electroplater=false
+    B:elevator=false
+    B:energizer=false
+    B:filtermover=false
+    B:fluiddrill=false
+    B:fluidpuller=false
+    B:fridge=false
+    B:grindstone=false
+    B:hatch=false
+    B:htfurnace=false
+    B:interceptor=false
+    B:inventorysensor=false
+    B:iondisperser=false
+    B:itempusher=false
+    B:itemredis=false
+    B:magcent=false
+    B:magnetblock=false
+    B:magnetizer=false
+    B:metal=true
+    B:metal.1=true
+    B:metal.2=true
+    B:metal.3=true
+    B:metal.4=true
+    B:metal.5=true
+    B:metalcutter=false
+    B:ore=true
+    B:ore.1=true
+    B:oreblock=true
+    B:oreblock.1=true
+    B:oreblock.2=true
+    B:oreblock.3=true
+    B:oredrill=false
+    B:pipe=false
+    B:planter=false
+    B:potionmixer=false
+    B:propfurnace=false
+    B:rednotifier=true
+    B:saw=false
+    B:scaffold=true
+    B:sequenceplacer=false
+    B:sluice=false
+    B:smokestack=false
+    B:smokestack.1=false
+    B:smokestack.2=false
+    B:smokestack.3=false
+    B:smokestack.4=false
+    B:smokestack.5=false
+    B:smokestack.6=false
+    B:smokestack.7=false
+    B:smokestack.8=false
+    B:spawner=false
+    B:stabilizer=false
+    B:stackmover=false
+    B:tankblock=false
+    B:temperer=false
+    B:teslacoil=false
+    B:watercollector=false
+    B:woodcutter=false
 }
 
 
@@ -6819,6 +6951,7 @@ immersivepetroleum {
 
 immersivetech {
     B:connectors=false
+    B:stonedecoration=true
 }
 
 
@@ -7053,6 +7186,52 @@ irontanks {
 
 jetorches {
     B:lamp=false
+}
+
+
+magneticraft {
+    B:airbubble=false
+    B:airlock=false
+    B:battery=false
+    B:box=false
+    B:burntlimestone=true
+    B:combustionchamber=false
+    B:computer=false
+    B:connector=false
+    B:container=false
+    B:conveyorbelt=false
+    B:coppertank=false
+    B:crushingtable=false
+    B:electricfurnace=false
+    B:electricheater=false
+    B:electricpole=false
+    B:electricpoletransformer=false
+    B:feedingtrough=false
+    B:grinder=false
+    B:infiniteenergy=false
+    B:inserter=false
+    B:ironpipe=false
+    B:limestone=true
+    B:miningrobot=false
+    B:multiblockcolumn=true
+    B:multiblockparts=true
+    B:oilsource=true
+    B:ores=true
+    B:pumpjack=false
+    B:pumpjackdrill=true
+    B:shelvingunit=false
+    B:sieve=false
+    B:sluicebox=false
+    B:solarmirror=false
+    B:solarpanel=false
+    B:solartower=false
+    B:steamboiler=false
+    B:steamengine=false
+    B:thermopile=false
+    B:tilelimestone=true
+    B:tubelight=false
+    B:watergenerator=false
+    B:windturbine=false
 }
 
 
@@ -7865,6 +8044,7 @@ nuclearcraft {
     B:decayhasteneridle=false
     B:dissolveractive=false
     B:dissolveridle=false
+    B:dryearth=true
     B:electrolyseractive=false
     B:electrolyseridle=false
     B:electromagnetsupercooleractive=false
@@ -7897,6 +8077,7 @@ nuclearcraft {
     B:fluidberkelium248fluorideflibe=false
     B:fluidberyllium=false
     B:fluidboricacid=false
+    B:fluidboron=false
     B:fluidboron10=false
     B:fluidboron11=false
     B:fluidboronnitridesolution=false
@@ -7914,6 +8095,12 @@ nuclearcraft {
     B:fluidcalifornium252fluoride=false
     B:fluidcalifornium252fluorideflibe=false
     B:fluidcoolant=false
+    B:fluidcopper=false
+    B:fluidcoppernak=false
+    B:fluidcoppernakhot=false
+    B:fluidcorium=false
+    B:fluidcryotheumnak=false
+    B:fluidcryotheumnakhot=false
     B:fluidcurium243=false
     B:fluidcurium243fluoride=false
     B:fluidcurium243fluorideflibe=false
@@ -8002,7 +8189,15 @@ nuclearcraft {
     B:fluiddepletedfueltbufluoride=false
     B:fluiddepletedfueltbufluorideflibe=false
     B:fluiddeuterium=false
+    B:fluiddiamond=false
+    B:fluiddiamondnak=false
+    B:fluiddiamondnakhot=false
     B:fluiddiborane=false
+    B:fluidemerald=false
+    B:fluidemeraldnak=false
+    B:fluidemeraldnakhot=false
+    B:fluidendernak=false
+    B:fluidendernakhot=false
     B:fluidethanol=false
     B:fluidflibe=false
     B:fluidfluorine=false
@@ -8082,14 +8277,33 @@ nuclearcraft {
     B:fluidfueltbu=false
     B:fluidfueltbufluoride=false
     B:fluidfueltbufluorideflibe=false
+    B:fluidglowstonenak=false
+    B:fluidglowstonenakhot=false
+    B:fluidgold=false
+    B:fluidgoldnak=false
+    B:fluidgoldnakhot=false
     B:fluidhelium=false
     B:fluidhelium3=false
     B:fluidhydrofluoricacid=false
     B:fluidhydrogen=false
+    B:fluidiron=false
+    B:fluidironnak=false
+    B:fluidironnakhot=false
+    B:fluidlapis=false
+    B:fluidlapisnak=false
+    B:fluidlapisnakhot=false
     B:fluidlif=false
     B:fluidliquidhelium=false
+    B:fluidliquidheliumnak=false
+    B:fluidliquidheliumnakhot=false
+    B:fluidlithium=false
     B:fluidlithium6=false
     B:fluidlithium7=false
+    B:fluidmagnesium=false
+    B:fluidmagnesiumnak=false
+    B:fluidmagnesiumnakhot=false
+    B:fluidnak=false
+    B:fluidnakhot=false
     B:fluidneptunium236=false
     B:fluidneptunium236fluoride=false
     B:fluidneptunium236fluorideflibe=false
@@ -8116,7 +8330,14 @@ nuclearcraft {
     B:fluidplutonium242fluorideflibe=false
     B:fluidplutoniumfluoride=false
     B:fluidplutoniumfluorideflibe=false
+    B:fluidpotassium=false
+    B:fluidquartz=false
+    B:fluidquartznak=false
+    B:fluidquartznakhot=false
     B:fluidradaway=false
+    B:fluidredstonenak=false
+    B:fluidredstonenakhot=false
+    B:fluidsodium=false
     B:fluidsteam=false
     B:fluidsulfur=false
     B:fluidsulfurdioxide=false
@@ -8131,6 +8352,9 @@ nuclearcraft {
     B:fluidthorium232fluorideflibe=false
     B:fluidthoriumfluoride=false
     B:fluidthoriumfluorideflibe=false
+    B:fluidtin=false
+    B:fluidtinnak=false
+    B:fluidtinnakhot=false
     B:fluidtritium=false
     B:fluiduranium=false
     B:fluiduranium233=false
@@ -8205,6 +8429,13 @@ nuclearcraft {
     B:rtgcalifornium=false
     B:rtgplutonium=false
     B:rtguranium=false
+    B:saltfissioncontroller=false
+    B:saltfissionframe=false
+    B:saltfissionglass=false
+    B:saltfissionheater=false
+    B:saltfissionvent=false
+    B:saltfissionvessel=false
+    B:saltfissionwall=false
     B:saltmixeractive=false
     B:saltmixeridle=false
     B:solarpanelbasic=false
@@ -8900,6 +9131,11 @@ redstonearsenal {
 }
 
 
+rflux {
+    B:invisibleblock=false
+}
+
+
 rftools {
     B:analogblock=false
     B:blockprotector=false
@@ -8977,6 +9213,24 @@ rftools {
     B:supportblock=false
     B:timerblock=false
     B:wireblock=false
+}
+
+
+rftoolscontrol {
+    B:craftingstation=false
+    B:node=false
+    B:processor=false
+    B:programmer=false
+    B:tank=false
+    B:workbench=false
+}
+
+
+rftoolspower {
+    B:cell1=false
+    B:cell2=false
+    B:cell3=false
+    B:informationscreen=false
 }
 
 
@@ -13347,6 +13601,11 @@ torchmaster {
     B:megatorch=false
     B:megatorch.1=false
     B:terrainlighter=false
+}
+
+
+transloc {
+    B:blocktranslocator=false
 }
 
 
