--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,7 +1,7 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Tue Mar 27 04:02:12 IDT 2018
-enableMiddleClick=false
+#Sun Apr 22 14:42:23 CDT 2018
+enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
 enableAutoRefill=false
