--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Tue Mar 27 03:58:48 IDT 2018
+#Sun Apr 22 14:40:38 CDT 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
@@ -9,8 +9,8 @@ memoryLow=0xE42F2F
 rotate=false
 memoryWarn=0xE6E84A
 showMemory=true
-enabled=true
 bar=0xCB3D35
+enabled=true
 resourcePackPath=resources
 logoOffset=0
 forgeTexture=fml\:textures/gui/forge.png
