Updated mod configs

--- a/config/Waddles.cfg
+++ b/config/Waddles.cfg
@@ -18,6 +18,21 @@ general {
         I:Max=4
         I:Min=1
         I:Weight=2
+
+        "spawnable biomes" {
+            # BiomeDictionary types to exclude [default: [FOREST], [MOUNTAIN], [NETHER]]
+            S:Exclude <
+                FOREST
+                MOUNTAIN
+                NETHER
+             >
+
+            # BiomeDictionary types to include [default: [SNOWY]]
+            S:Include <
+                SNOWY
+             >
+        }
+
     }
 
 }
