--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -205,6 +205,8 @@ crafting {
     B:mcjty.rftools.blocks.ores.DimensionalShardBlock=true
     B:mcjty.rftools.blocks.teleporter.DestinationAnalyzerBlock=true
     B:mcjty.rftools.blocks.teleporter.MatterBoosterBlock=true
+    B:mcjty.xnet.blocks.redstoneproxy.RedstoneProxyBlock=true
+    B:mcjty.xnet.blocks.redstoneproxy.RedstoneProxyUBlock=true
     B:me.dmillerw.storage.block.BlockCrate=true
     B:me.dmillerw.storage.block.BlockGravityInducer=true
     B:me.dmillerw.storage.block.BlockItemizer=true
