--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -155,9 +155,6 @@ fission {
     # *Only effects new mechanics.* Maximum number of moderator blocks that can be between two cells for neutron radiation to be shared between them and their efficiency to increase.
     I:fission_neutron_reach=4
 
-    # Enable experimental fission reactor mechanics? Only enable this if you want to play with planned features for fission reactors - be warned that, while this is enabled, new updates of the mod may make previously stable reactors unstable. Disabled by default not to mess with any already existing setups.
-    B:fission_experimental_mechanics=false
-
     # Base ticks the fuels last. Order: TBU, TBU Oxide.
     D:fission_thorium_fuel_time <
         144000.0
@@ -421,6 +418,7 @@ fission {
         720.0
         900.0
      >
+    B:fission_experimental_mechanics=false
 
     # Ticks per structure check.
     I:fission_update_rate=40
@@ -695,6 +693,9 @@ ores {
 
 
 other {
+    # Hold down control rather than shift to show extra tooltip info?
+    B:ctrl_info=false
+
     # Will mobs drop rare items?
     B:rare_drops=false
 
@@ -730,11 +731,7 @@ other {
 
     # Register alternative redstone, glowstone, cryotheum and ender fluids? It is recommended that this is set to true if no CoFH mods are installed.
     B:register_cofh_fluids=false
-
-    # Will blocks have connected textures if they are available?
     B:connected_textures=true
-
-    # Enable or disable connected textures for each individual available block. Order: Transparent Reactor Casing, Fusion Electromagnet.
     B:connected_textures_each <
         true
         true
@@ -743,7 +740,7 @@ other {
 
 
 processors {
-    # Base ticks per process. Order: Manufactory, Isotope Separator, Decay Hastener, Fuel Reprocessor, Alloy Furnace, Fluid Infuser, Melter, Supercooler, Electrolyzer, Neutron Irradiator, Ingot Former, Pressurizer, Chemical Reactor, Salt Mixer, Crystallizer, Fluid Enricher, Fluid Extractor.
+    # Base ticks per process. Order: Manufactory, Isotope Separator, Decay Hastener, Fuel Reprocessor, Alloy Furnace, Fluid Infuser, Melter, Supercooler, Electrolyzer, Neutron Irradiator, Ingot Former, Pressurizer, Chemical Reactor, Salt Mixer, Crystallizer, Fluid Enricher, Fluid Extractor, Centrifuge.
     I:processor_time <
         400
         800
@@ -762,9 +759,10 @@ processors {
         1600
         600
         2400
+        1200
      >
 
-    # Base RF/t use during processing. Order: Manufactory, Isotope Separator, Decay Hastener, Fuel Reprocessor, Alloy Furnace, Fluid Infuser, Melter, Supercooler, Electrolyzer, Neutron Irradiator, Ingot Former, Pressurizer, Chemical Reactor, Salt Mixer, Crystallizer, Fluid Enricher, Fluid Extractor.
+    # Base RF/t use during processing. Order: Manufactory, Isotope Separator, Decay Hastener, Fuel Reprocessor, Alloy Furnace, Fluid Infuser, Melter, Supercooler, Electrolyzer, Neutron Irradiator, Ingot Former, Pressurizer, Chemical Reactor, Salt Mixer, Crystallizer, Fluid Enricher, Fluid Extractor, Centrifuge.
     I:processor_power <
         20
         10
@@ -780,6 +778,7 @@ processors {
         40
         10
         20
+        10
         10
         10
         10
