--- a/config/bedrockores.cfg
+++ b/config/bedrockores.cfg
@@ -32,6 +32,8 @@ general {
 
     # A blacklist to easily disable ore generation for individual mods. Useful when you want to disable ores with default configurations without adding an `enabled: false` entry for each one to a JSON config. This must be the mod IDs of the mods to disable, i.e. the bit in the block state name before the colon, e.g. `thermalfoundation`.
     S:oreModBlacklist <
+        immersiveengineering
+        forestry
      >
 
     # Controls the sort index the `groupOrder` field in a JSON config for ore gen evaluates to; specifically, the sort index will be the index in this list times five. So by default the sort index for ThermalFoundation ores will be 0 and the one for Immersive Engineering will be 10.
