--- a/config/pneumaticcraft/thirdparty.cfg
+++ b/config/pneumaticcraft/thirdparty.cfg
@@ -2,6 +2,7 @@
   "description": "Enable/disable integration of specific third-party mods",
   "enabled_mods": {
     "theoneprobe": true,
+    "immersiveengineering": true,
     "computercraft": true,
     "waila": true,
     "opencomputers|core": true,
