--- a/config/bedrockores.cfg
+++ b/config/bedrockores.cfg
@@ -34,6 +34,7 @@ general {
     S:oreModBlacklist <
         immersiveengineering
         forestry
+	deepresonance
      >
 
     # Controls the sort index the `groupOrder` field in a JSON config for ore gen evaluates to; specifically, the sort index will be the index in this list times five. So by default the sort index for ThermalFoundation ores will be 0 and the one for Immersive Engineering will be 10.
