--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -84,7 +84,6 @@ general {
     ##########################################################################################################
 
     tweaks {
-        # Glass will drop shards when broken, if it would otherwise drop nothing
         B:enableGlassShardDrops=false
 
         # Stops Terraqueous fences from visually connecting to blocks with a hardness at or less then this number.
@@ -873,6 +872,14 @@ general {
             # Min: 20
             # Max: 6000
             I:sfTicksToSmelt=400
+        }
+
+        glassshards {
+            # Glass Blocks will drop shards when broken, if it would otherwise drop nothing
+            B:enableGlassShardDropsForBlocks=true
+
+            # Splash Potions will drop a shard when broken
+            B:enableGlassShardDropsForPotions=true
         }
 
     }
