Added Thaumic JEI

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -387,6 +387,13 @@ crafting {
     B:slimeknights.tconstruct.world.block.BlockSlimeLeaves=true
     B:sugiforest.block.BlockSugiLog=true
     B:sugiforest.block.BlockSugiWood=true
+    B:thaumcraft.common.blocks.basic.BlockMetalTC=true
+    B:thaumcraft.common.blocks.basic.BlockPlanksTC=true
+    B:thaumcraft.common.blocks.basic.BlockStonePorous=true
+    B:thaumcraft.common.blocks.basic.BlockStoneTC=true
+    B:thaumcraft.common.blocks.misc.BlockFlesh=true
+    B:thaumcraft.common.blocks.world.ore.BlockOreTC=true
+    B:thaumcraft.common.blocks.world.plants.BlockLogsTC=true
     B:therealfarfetchd.rswires.common.block.Lamp=true
     B:therealfarfetchd.rswires.common.block.LampInv=true
     B:vazkii.botania.common.block.BlockDreamwood=true
