--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -150,7 +150,7 @@ general {
                 # Formats: Dictionary Item: 'ore:<dictionary name>#<count>', Mod Item: '<modId>:<itemId>#<count>', Exact Mod Item: '<modId>:<itemId>@<meta>#<count>'
                 S:whitelist <
                     minecraft:stick@0#1-3
-                    thermalfoundation:materials@800#1-2
+                    thermalfoundation:material@800#1-2
                  >
             }
 
@@ -182,7 +182,7 @@ general {
                     thermalfoundation:material@64#1
                     thermalfoundation:material@64#2
                     thermalfoundation:material@65#1
-                    thermalfoundation:material@68#1
+                    thermalfoundation:material@69#1
                     terraqueous:item_main@215#2
                     terraqueous:item_main@215#4
                     terraqueous:item_main@215#2
@@ -245,7 +245,7 @@ general {
                     thermalfoundation:material@64#1
                     thermalfoundation:material@64#2
                     thermalfoundation:material@65#1
-                    thermalfoundation:material@68#1
+                    thermalfoundation:material@69#1
                     terraqueous:item_main@214#2
                     terraqueous:item_main@214#4
                     terraqueous:item_main@214#2
@@ -281,7 +281,7 @@ general {
                     thermalfoundation:material@64#1
                     thermalfoundation:material@64#2
                     thermalfoundation:material@65#1
-                    thermalfoundation:material@68#1
+                    thermalfoundation:material@69#1
                     terraqueous:item_main@216#2
                     terraqueous:item_main@216#4
                     terraqueous:item_main@216#2
