--- a/config/harvest_config.json
+++ b/config/harvest_config.json
@@ -1,37 +1,43 @@
 {
   "crops": [
-    {
-      "initialBlock": {
-        "blockName": "minecraft:wheat",
-        "meta": 7
-      }
-    },
-    {
-      "initialBlock": {
-        "blockName": "minecraft:carrots",
-        "meta": 7
-      }
-    },
-    {
-      "initialBlock": {
-        "blockName": "minecraft:potatoes",
-        "meta": 7
-      }
-    },
-    {
-      "initialBlock": {
-        "blockName": "minecraft:beetroots",
-        "meta": 3
-      }
-    },
-    {
-      "initialBlock": {
-        "blockName": "minecraft:nether_wart",
-        "meta": 3
-      }
+  {
+    "initialBlock": {
+      "blockName": "minecraft:wheat",
+      "meta": 7
     }
-  ],
+  },
+  {
+    "initialBlock": {
+      "blockName": "minecraft:carrots",
+      "meta": 7
+    }
+  },
+  {
+    "initialBlock": {
+      "blockName": "minecraft:potatoes",
+      "meta": 7
+    }
+  },
+  {
+    "initialBlock": {
+      "blockName": "minecraft:beetroots",
+      "meta": 3
+    }
+  },
+  {
+    "initialBlock": {
+      "blockName": "extratrees:hops",
+      "meta": 7
+    }
+  },
+  {
+    "initialBlock": {
+      "blockName": "rockhounding_surface:ricegrass_crop",
+      "meta": 7
+    }
+  }
+],
   "exhaustionPerHarvest": 0.005,
   "additionalLogging": false,
-  "checkForCrops": false
+  "checkForCrops": true
 }
