Prevented UniDict from messing with alloy dust recipes

--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -221,6 +221,10 @@ resources {
     # note: this will be executed after Crafting Integration.
     # note 2: if there is a space on the end of the recipe, then the recipe name must stay in "recipename", this is ONLY required when there is a space on the end " " [default: ]
     S:recipeToRemoveList <
+	unidict:dustconstantan_x2_size.2
+	unidict:dustinvar_x3_size.3
+	unidict:dustbronze_x4_size.4
+	unidict:dustelectrum_x2_size.2
      >
 
     # resources to be black-listed.
