Replaced aluminum with nickel in scripts

--- a/config/backpacks16840.cfg
+++ b/config/backpacks16840.cfg
@@ -70,7 +70,7 @@ general {
     B:"Limit collect/resupply to opped players"=false
 
     # When this is true pressing the inventory key while you have a backpack in your hand will open the backpack.
-    B:"Open backpack with inventory key"=true
+    B:"Open backpack with inventory key"=false
 
     # When you open a backpack with right-click it will open in the same inventory section unless you're holding down shift. Set this to false to reverse this behaviour.
     B:"Open backpacks in same section"=true
