Updated some mods

--- a/config/forestry/common.cfg
+++ b/config/forestry/common.cfg
@@ -75,7 +75,6 @@ structures {
 
 
 tweaks {
-    # Enables the function that cans and capsules can pick up fluids from the world. [default: false]
     B:capsule=false
 
     humus {
@@ -158,6 +157,14 @@ tweaks {
     book {
         # Players who enter the world for the first time get a Forester's Manual. [default: true]
         B:spawn=true
+    }
+
+    capsule {
+        #  [default: false]
+        B:capsulePickup=false
+
+        #  [default: false]
+        B:capsuleReuseable=false
     }
 
 }
