--- a/config/pregenerator/PregenConfig.cfg
+++ b/config/pregenerator/PregenConfig.cfg
@@ -18,6 +18,12 @@ general {
 
     # Storage for the TimePerTickCommand if needs to be changed outside of the game [range: 10 ~ 2147483647, default: 40]
     I:TimePerTick=40
+
+    # Auto Stops the game when the memory gets to low on average, 
+    B:autoRestart=false
+
+    # How much free memory should be left until the stop kicks in
+    I:restartMemory=1024
 }
 
 
@@ -30,6 +36,12 @@ info {
     B:Loaded-Files=false
     B:RamUsage=true
     B:TaskList=true
+}
+
+
+retrogen {
+    # List of Currently active WorldGenerators
+    S:activeworldgenerators=
 }
 
 
