--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -6,8 +6,6 @@ accelerator {
 
     # mB/s of liquid helium required to keep a superconducting supercooler active.
     I:accelerator_supercooler_coolant=5
-
-    # Ticks per ring check.
     I:accelerator_update_rate=40
 }
 
@@ -109,7 +107,7 @@ fission {
         110.0
      >
 
-    # Base heat removed per tick/mB. Order: water, redstone, quartz, gold, glowstone, lapis, diamond, liquid helium, enderium, cryotheum, iron, emerald, copper, tin, magnesium.
+    # Heat removed per tick/mB. Order: water, redstone, quartz, gold, glowstone, lapis, diamond, liquid helium, enderium, cryotheum, iron, emerald, copper, tin, magnesium.
     D:fission_active_cooling_rate <
         100.0
         6400.0
@@ -128,7 +126,7 @@ fission {
         7200.0
      >
 
-    # Do water coolers have to be adjacent to reactor casing?
+    # Do water coolers have to fulfill their position requirements to be active?
     B:fission_water_cooler_requirement=true
 
     # Can fission reactors overheat?
@@ -419,8 +417,6 @@ fission {
         900.0
      >
     B:fission_experimental_mechanics=false
-
-    # Ticks per structure check.
     I:fission_update_rate=40
 }
 
@@ -440,6 +436,25 @@ fusion {
 
     # Can fusion reactors be actively cooled (disable if suffering from lag)?
     B:fusion_active_cooling=true
+
+    # Base heat removed per tick/mB. Order: water, redstone, quartz, gold, glowstone, lapis, diamond, liquid helium, enderium, cryotheum, iron, emerald, copper, tin, magnesium.
+    D:fusion_active_cooling_rate <
+        400.0
+        25600.0
+        24000.0
+        38400.0
+        32000.0
+        22400.0
+        56000.0
+        52800.0
+        43200.0
+        51200.0
+        19200.0
+        28800.0
+        20800.0
+        24000.0
+        28800.0
+     >
 
     # Minimum size of fusion toroids.
     I:fusion_min_size=1
@@ -551,8 +566,6 @@ fusion {
         11000.0
         14000.0
      >
-
-    # Ticks per toroid check.
     I:fusion_update_rate=40
 }
 
@@ -584,11 +597,7 @@ generators {
         25
         40
      >
-
-    # The RF used per EU emitted for generators.
     I:generator_rf_per_eu=16
-
-    # Ticks per fluid content check.
     I:generator_update_rate=20
 }
 
@@ -693,7 +702,7 @@ ores {
 
 
 other {
-    # Hold down control rather than shift to show extra tooltip info?
+    # Hold down the control key rather than the shift key to show extra tooltip info?
     B:ctrl_info=false
 
     # Will mobs drop rare items?
@@ -796,11 +805,11 @@ processors {
         1.0
      >
 
-    # The RF received per EU injected for processors.
-    I:processor_rf_per_eu=4
+    # Conversion ratio between Redstone Flux and IC2 Energy Units.
+    I:rf_per_eu=16
 
-    # Ticks per fluid content check.
-    I:processor_update_rate=20
+    # Ticks per machine update - used for various processes such as GUI updates and multiblock structure checks.
+    I:machine_update_rate=20
 
     # Rates at which passive machines produce materials. Order: Helium Collector, Cobblestone Generator, Infinite Water Source, Nitrogen Collector.
     I:processor_passive_rate <
@@ -824,6 +833,8 @@ processors {
 
     # Will machines produce particle effects while running?
     B:processor_particles=true
+    I:processor_rf_per_eu=4
+    I:processor_update_rate=20
 }
 
 
@@ -839,9 +850,6 @@ salt_fission {
 
     # gui.config.salt_fission.salt_fission_overheat.comment
     B:salt_fission_overheat=true
-
-    # gui.config.salt_fission.salt_fission_update_rate.comment
-    I:salt_fission_update_rate=1
 
     # Minimum side length of molten salt fission reactors.
     I:salt_fission_min_size=1
@@ -873,6 +881,7 @@ salt_fission {
 
     # gui.config.salt_fission.salt_fission_redstone_max_heat.comment
     I:salt_fission_redstone_max_heat=50
+    I:salt_fission_update_rate=1
 }
 
 
