Added Tech Reborn

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -387,6 +387,13 @@ crafting {
     B:slimeknights.tconstruct.world.block.BlockSlimeLeaves=true
     B:sugiforest.block.BlockSugiLog=true
     B:sugiforest.block.BlockSugiWood=true
+    B:techreborn.blocks.BlockFusionCoil=true
+    B:techreborn.blocks.BlockMachineFrames=true
+    B:techreborn.blocks.BlockOre=true
+    B:techreborn.blocks.BlockOre2=true
+    B:techreborn.blocks.BlockRubberPlank=true
+    B:techreborn.blocks.BlockStorage=true
+    B:techreborn.blocks.BlockStorage2=true
     B:thaumcraft.common.blocks.basic.BlockMetalTC=true
     B:thaumcraft.common.blocks.basic.BlockPlanksTC=true
     B:thaumcraft.common.blocks.basic.BlockStonePorous=true
