Added Charset Immersion

--- a/config/charset/modules.cfg
+++ b/config/charset/modules.cfg
@@ -43,6 +43,9 @@ overrides {
     # Adds a Pocket Crafting Table [Profile: FORCED]
     S:crafting.pocket=DEFAULT
 
+    # Place things! In the world! And they stack! [Profile: FORCED]
+    S:immersion.stacks=DEFAULT
+
     # Wire support module [Profile: STABLE]
     S:lib.wires=DEFAULT
 
