Changed the ImE config to prefer TF ores

--- a/config/immersiveengineering.cfg
+++ b/config/immersiveengineering.cfg
@@ -51,7 +51,7 @@ general {
     # A list of preferred Mod IDs that results of IE processes should stem from, aka which mod you want the copper to come from.
     # This affects the ores dug by the excavator, as well as those crushing recipes that don't have associated IE items. This list is in oreder of priority.
     S:preferredOres <
-        immersiveengineering
+        thermalfoundation
      >
 
     # Set this to false to hide the update news in the manual
@@ -550,5 +550,3 @@ general {
     }
 
 }
-
-
