Now you can smelt ores normally

--- a/config/charcoal_pit.cfg
+++ b/config/charcoal_pit.cfg
@@ -264,7 +264,7 @@ kiln {
 
     # Register custom pottery kiln recipes in the format 'modId:ingredientId' ingredientMeta 'modId:resultId' resultMeta. ex: minecraft:clay_ball 0 minecraft:brick 0 [default: []]
     S:PotteryRecipes <
-        
+
      >
 
     # Time the pottery kiln takes to finish. 1000 Ticks = 1 MC hour [range: 1000 ~ 1000000, default: 8000]
@@ -310,7 +310,7 @@ ore {
     S:BloomSlagChance=0.5
 
     # If furnace ore smelting recipes should be disabled [default: true]
-    B:DisableFurnaceOre=true
+    B:DisableFurnaceOre=false
 
     # The chance of rich slag being dropped insted of plain slag from the ore kiln [range: 0.0 ~ 1.0, default: 0.5]
     S:KilnSlagChance=0.5
@@ -323,5 +323,3 @@ ore {
         0
      >
 }
-
-
