Disabled Extra Trees' trees

--- a/config/forestry/extratrees/modules.cfg
+++ b/config/forestry/extratrees/modules.cfg
@@ -34,7 +34,7 @@ modules {
 
     # Adds wood stairs, fences, planks, logs and doors.
     # Dependencies: [ extratrees:extratrees.core ]
-    B:extratrees.wood=true
+    B:extratrees.wood=false
 }
 
 
