--- a/config/LagGoggles-client.cfg
+++ b/config/LagGoggles-client.cfg
@@ -12,14 +12,11 @@ general {
     # GREEN_TO_BLUE
     S:COLORS=GREEN_TO_RED
 
-    # Define the number of microseconds at which an object is marked with a deep red colour for WORLD lag.
+    # Define the number of microseconds at which an object is marked with a deep red colour
     I:GRADIENT_MAXED_OUT_AT_MICROSECONDS=25
-
-    # Define the number of microseconds at which an object is marked with a deep red colour for FPS lag.
     I:GRADIENT_MAXED_OUT_AT_NANOSECONDS_FPS=50000
 
     # What is the minimum amount of microseconds required before an object is tracked in the client?
-    # This is only for WORLD lag.
     # This also affects the analyze results window
     I:MINIMUM_AMOUNT_OF_MICROSECONDS_THRESHOLD=1
 }
