Fixed Lost Cities not generating

--- a/config/lostcities/general.cfg
+++ b/config/lostcities/general.cfg
@@ -37,7 +37,7 @@ general {
     B:debug=false
 
     # The default 'profile' to use for the overworld [default: default]
-    S:defaultProfile=default
+    S:defaultProfile=extrararecities
 
     # If true and if Biomes O Plenty is present the dimension will use BoP biomes [default: true]
     B:dimensionBoP=true
