Added molten ender geodes to the end

--- a/config/forestry/common.cfg
+++ b/config/forestry/common.cfg
@@ -247,6 +247,9 @@ world {
              >
             I:dimWhitelist <
              >
+
+            # How Frequently forestry generates it's trees in the world [range: 0.0 ~ 10.0, default: 1.0]
+            S:treeFrequency=1.0
         }
 
     }
