--- a/config/randomtweaks/randomtweaks.cfg
+++ b/config/randomtweaks/randomtweaks.cfg
@@ -30,6 +30,9 @@ general {
         # Whether FoV changes are enabled by default.
         B:fovChangesEnabledByDefault=true
 
+        # Whether a status message should be displayed when FoV changes are toggled.
+        B:fovChangesStatusMessage=true
+
         # Moves the Bucket to the Tools creative tab.
         B:moveBucketCreativeTab=true
 
