Added ImE/builders guides tools to morphtool config

--- a/config/morphtool.cfg
+++ b/config/morphtool.cfg
@@ -17,6 +17,8 @@ general {
     S:"Whitelisted Items" <
         botania:twigwand
         appliedenergistics2:network_tool
+	immersiveengineering:tool
+	buildersguides:mallet
      >
     S:"Whitelisted Names" <
         wrench
